1.1.7 - TBD
    * Increased maximum FoV value to 175 degrees
    * Ctrl+W now closes the 3D preview window
    * Added buttons for quick isometric camera setup
    * Improved camera controls in parallel projection mode

1.1.6 - 2013-03-06
    * Added Comparator block
    * Render the flowers in flower pots
    * Cloud height is now relative to the scene origin
    * Stone wall sections with a torch above render as corner sections
    * Added command-line option for specifying job tile width
    * Fixed error in command-line option parsing - if render thread count was
    specified, it was always set to 1 regardless of the actual value
    * It is now possible to manually input the camera position and direction
    * Fence gates set between wall sections are rendered at correct height
    * Added Hopper block

1.1.5 - 2013-02-26
    * Added parallel projection (TOGoS)
    * Added Daylight Sensor block
    * Fixed issue causing Nether Brick Stairs to render as Nether Brick Fences
    * Increased default torch emittance

1.1.4 - 2013-02-18
    * Implemented rendering of several new blocks:
        + Anvil
        + Nether Brick Slab
        + Quartz Slab
        + Quartz Stairs
        + Block of Quartz
        + Block of Redstone
        + Dropper
        + Nether Quartz Ore
        + Activator Rail
        + Trapped Chest
        + Weighted Pressure Plate (light & heavy)
    * Improved rendering of the Beacon block
    * Beacon block now emits light
    * Partially implemented flower pot rendering
    * Removed spatial filtering in sample selection (slightly improves
      rendering performance)
    * Added option to enable rendering clouds
    * Horizontal coordinates are now used for sun position
    * Allow opening read-only region files
    * If sunlight is disabled the sun will not be rendered
    * It is now possible to disable the sky horizon mirroring
    * Added support for new texture pack layout (individual block texture files)

1.1.3 - 2013-01-14